allow media urls with space (fixes #20)